Prevent long code lines from breaking visual entry editor
Previously, long lines of preformatted text would cause the lines to
run off the side of the ProseMirror edit box and give the entire entry
editor a scrollbar. This commit makes the edit box itself scroll,
which looks and feels much less broken.

--- a/src/components/Widgets/MarkdownControlElements/VisualEditor/index.css
+++ b/src/components/Widgets/MarkdownControlElements/VisualEditor/index.css
@@ -69,6 +69,7 @@
     background-color: var(--controlBGColor);
     padding: 12px;
     border-radius: 0 0 var(--borderRadius) var(--borderRadius);
+    overflow-x: auto;
 
     & ul {
       padding-left: 20px;
